<resources>
    <string name="app_name">Connectus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_in_with_email">Login in with Email</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="email_address">Электронная почта</string>
    <string name="register"><u>Зарегистрироваться</u></string>
    <string name="invalid_email_error">Неверный формат email адреса</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in"><u>Войти</u></string>
    <string name="privacy_text">Регистрируясь, вы соглашаетесь с нашими <u>Условиями</u> использования и <u>Политикой конфиденциальности</u></string>
    <string name="_14_00">14:00</string>
    <string name="_18_00">18:00</string>
    <string name="image_desc">image_desc</string>
    <string name="fullscreen_image">fullscreen_image</string>
    <string name="adress">Адрес</string>
    <string name="age">Возраст</string>
    <string name="employee">Род занятий</string>
    <string name="text_send">Отправить</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="resendtext">Повторить можно через 1 мин.</string>
    <string name="submit">Подтвердить</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="instr">Инструкции по сбросу пароля отправлены на вашу почту</string>
    <string name="verif"><u>Верификация</u></string>
    <string name="download"><u>Скачать</u></string>
    <string name="text_message">Привет как твои дела</string>
    <string name="about_project">
    Connectus Messenger — это Android-приложение, разработанное для безопасного и удобного обмена сообщениями. Оно позволяет пользователям отправлять текстовые сообщения, делиться файлами и общаться в реальном времени. Приложение обладает простым и интуитивно понятным интерфейсом, что делает его идеальным для повседневного использования.
</string>

</resources>