<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.Fragments.signin.LoginInputFragment">
    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            android:text="Добро пожаловать!"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="Введите свои учетные данные,чтобы продолжить."
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@string/invalid_email_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/back_edit_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:hintEnabled="false"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawablePadding="14dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_passw"
                android:background="@drawable/back_edit_text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:text="Забыли пароль?"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/square_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="#EBEBEB"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignBottom = "@+id/rootLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="У вас нет аккаунта? "
            android:textColor="@color/grey"
            />
        <TextView
            android:id="@+id/registerButtonTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/register"
            />
    </LinearLayout>
</RelativeLayout>
