<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="80dp"
                    android:text="Создать аккаунт!"
                    android:textColor="@color/black"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Зарегистрируйтесь, чтобы начать."
                    android:textColor="@color/grey"
                    android:textSize="16sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameRegisterET"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/back_edit_text"
                        android:drawableStart="@drawable/nameprofileicon"
                        android:drawablePadding="10dp"
                        android:hint="Имя"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameRegisterET"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/back_edit_text"
                        android:drawableStart="@drawable/nameprofileicon"
                        android:drawablePadding="10dp"
                        android:hint="Фамилия"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneRegisterET"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/back_edit_text"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="10dp"
                        android:hint="Телефон"
                        android:inputType="phone"
                        android:digits="0123456789+"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextLogin"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/back_edit_text"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:hintEnabled="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:drawablePadding="14dp"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:autofillHints="password"
                        android:drawableStart="@drawable/ic_passw"
                        android:background="@drawable/back_edit_text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:hintEnabled="false"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:drawablePadding="14dp"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:autofillHints="password"
                        android:drawableStart="@drawable/ic_passw"
                        android:background="@drawable/back_edit_text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                   android:gravity="center_vertical"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp">

                    <CheckBox
                        android:id="@+id/termsCheckBox"
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSign"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/square_button"
                    android:text="Зарегистрироваться"
                    android:textColor="@color/white"
                    android:enabled="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>



        </LinearLayout>
    </ScrollView>
    <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="59dp"
    android:background="#EBEBEB"
    android:gravity="center"
    android:layout_marginTop="40dp"
    android:orientation="horizontal"
    android:layout_alignBottom = "@+id/scroll">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Уже есть аккаунт? "
        android:textColor="@color/grey"
        />
    <TextView
        android:id="@+id/loginButtonTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/log_in"
        />
</LinearLayout>
</RelativeLayout>
